Deploy: Configure backend for Render (PORT, CORS env vars, render.yaml)